force-app/main/default/objects/Event__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <description>Fecha en que finaliza el periodo de confirmación de asistencia</description>
    <inlineHelpText>Fecha en que finaliza el periodo de confirmación de asistencia</inlineHelpText>
    <label>End Date/Time</label>
    <type>DateTime</type>
</CustomField>