force-app/main/default/objects/Event__c/fields/Event_Organizer__c.field-meta.xml
<CustomField>
    <fullName>Event_Organizer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Campo completado mediante una relación Master-Detail con el objeto Event Organizer</description>
    <inlineHelpText>Organizador del evento</inlineHelpText>
    <label>Event Organizer</label>
    <referenceTo>Event_Organizer__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>