force-app/main/default/objects/Event__c/fields/Location_Verified__c.field-meta.xml
<CustomField>
    <fullName>Location_Verified__c</fullName>
    <description>Completado mediante una formula que obtiene el campo Verified del objeto Location</description>
    <formula>Location__r.Verified__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indica si la ubicación esta verificada</inlineHelpText>
    <label>Location Verified</label>
    <type>Checkbox</type>
</CustomField>