force-app/main/default/objects/Event__c/fields/People_Attending__c.field-meta.xml
<CustomField>
    <fullName>People_Attending__c</fullName>
    <description>Calcula la cantidad de asistentes a partir de ser un campo Roll Up de la relación Master-Detail con el objeto Attendees</description>
    <inlineHelpText>Cantidad de asistentes al evento</inlineHelpText>
    <label># People Attending</label>
    <summaryForeignKey>Event_Attendee__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>