force-app/main/default/objects/Event__c/fields/Recurring__c.field-meta.xml
<CustomField>
    <fullName>Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el evento se realiza recurrentemente o por unica vez. Si es recurrente, habilita a completar el campo Frequency</description>
    <inlineHelpText>Se realiza recurrentemente o por única vez?</inlineHelpText>
    <label>Recurring?</label>
    <type>Checkbox</type>
</CustomField>