force-app/main/default/objects/Event__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <description>Fecha en que comienza el periodo de confirmación de asistencia</description>
    <inlineHelpText>Fecha en que comienza el periodo de confirmación de asistencia</inlineHelpText>
    <label>Start Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>