force-app/main/default/objects/Event__c/validationRules/Completar_Location.validationRule-meta.xml
<ValidationRule>
    <fullName>Completar_Location</fullName>
    <active>true</active>
    <description>Si el evento es presencial se debe completar la Location con la ubicación</description>
    <errorConditionFormula>AND (
  TEXT( Event_Type__c ) = &apos;In-Person&apos;,
  ISBLANK( Location__c ) 
)</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>Se debe completar el campo Location</errorMessage>
</ValidationRule>