force-app/main/default/objects/Event__c/validationRules/End_Date_Fecha_Futura.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Fecha_Futura</fullName>
    <active>true</active>
    <description>La fecha en End Date debe ser al menos 1 dia posterior a la fecha en Start Date</description>
    <errorConditionFormula>End_Date_Time__c &lt;= (Start_Date_Time__c + 1)</errorConditionFormula>
    <errorDisplayField>End_Date_Time__c</errorDisplayField>
    <errorMessage>La fecha End Date debe ser posterior a Start Date</errorMessage>
</ValidationRule>