force-app/main/default/objects/Event__c/validationRules/Evento_Virtual.validationRule-meta.xml
<ValidationRule>
    <fullName>Evento_Virtual</fullName>
    <active>true</active>
    <description>Si el evento es virtual, no se puede seleccionar una ubicacion en el campo Location</description>
    <errorConditionFormula>AND (
   TEXT(Event_Type__c) = &apos;Virtual&apos;,
   NOT( ISBLANK( Location__c ) ) 
)</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>Si el evento es Virtual no se puede seleccionar una ubicacion en Location</errorMessage>
</ValidationRule>