force-app/main/default/objects/Event__c/validationRules/Se_debe_completar_Frequency.validationRule-meta.xml
<ValidationRule>
    <fullName>Se_debe_completar_Frequency</fullName>
    <active>true</active>
    <description>Si el campo Recurring? esta activado, se debe seleccionar un valor del campo Frequency</description>
    <errorConditionFormula>AND(
  Recurring__c ,
  ISBLANK( TEXT( Frequency__c ) ) 
)</errorConditionFormula>
    <errorDisplayField>Frequency__c</errorDisplayField>
    <errorMessage>Si el campo Recurring? esta activado se debe completar también Frequency</errorMessage>
</ValidationRule>